test/files/neg/t12953-expansion/Client_2.scala

//> using options -Werror -Wunused:locals -Xlint:missing-interpolator -Wmacros:after

import Macro.id

object Test extends App {
  println {
    id {
      println("hello, world of $unusedVariable")
    }
  }
}
